# fiberfx

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  .msh-memory.json  CLAUDE.md  Dockerfile  GEOMETRIA-MAP.md  Makefile  README.md  fly.toml  game.html  go.mod  go.sum  go.work  go.work.sum  health.html  index.html  llms.txt  main.go  sitemap.xml
.claude/: settings.template.json
ai-rabota/: index.html
apps/: Dockerfile  fly.toml
datadog/: datadog.default.conf  go.mod  go.sum
db/: go.mod
docs/: AAW_DEVELOPMENT.md  CONFIGURATION.md  FLYER_RECREATE_GUIDE.md  QUICK-REFERENCE.md  jonnify.ideas.md  jonnify.md  jonnify.todo.md  jonnify.workspace.md
echo/: .env.example  .env.test  .tool-versions  CLAUDE.md  Dockerfile  README.md  fly.toml  mix.exs
echo/apps/echo_graft/crates/echo_graft_backend/: Cargo.toml
echo/apps/echo_graft/crates/echo_graft_backend/src/: backend_main.rs  backpressure.rs  buffer.rs  dispatch.rs  feed_sink.rs  lib.rs  live.rs  session.rs  shaper.rs  transport.rs
echo/apps/echo_graft/crates/echo_graft_backend/tests/: backpressure.rs  buffer.rs  live.rs  reconnect.rs  round_trip.rs
echo/apps/echo_graft/crates/echo_graft_proto/: Cargo.toml
echo/apps/echo_graft/crates/echo_graft_proto/src/: lib.rs
echo/apps/echo_graft/crates/echo_graft_proto/tests/: conformance.rs
echo/apps/echo_graft/crates/echo_graft_proto/tests/fixtures/: wire.fixtures
echo/apps/echo_graft/crates/echo_graft_test/: Cargo.toml
echo/apps/echo_graft/crates/echo_graft_test/src/: lib.rs
echo/apps/echo_graft/crates/echo_graft_test/tests/: concurrent_commit.rs  identity_feed.rs  remote_fence.rs  remote_sync.rs  verify_snapshot.rs  verify_soft_truncate.rs
edu/: finances-m1-s3.html  finances-m1.html  finances-m2.html  finances-m3.html  finances-m4.html  finances-m5.html  finances-m6-s1.html  finances-m6-s2.html  finances-m6-s3.html  finances-m6-s4.html  finances-m6-s5.html  finances-m6-s6.html  finances-m6.html  finances-test.html  finances.html
ege/: index.html  sharygin-pokolenia.html  stereometria.html  zadanie-13-atlas.html  zadanie-14-atlas.html  zadanie-16-atlas.html
elixir/: index.html  learn.html  llms.txt  login.html
error/: 502.html  503.html
fiberfx/: codemojex.go  generator.go  id.go  namespace.go
flyer/: Makefile  flyer.conf  flyer.default.conf  flyer.fly.conf  go.mod  go.sum
future/: algebra-yazyk.html  algebraicheskie-tipy.html  buleva-algebra.html  claude-code.html  context-engineering.html  finale.html  funkcionalnoe-programmirovanie.html  index.html  instrumenty-ii.html  inzhener-proektirovshchik.html  llm-agenty.html  logika-hoara.html  logika-korrektnost.html  mashinnoe-obuchenie.html  matematicheski-korrektnye-programmy.html  matematika-yazyk.html  mif-vosstanie.html  transformer-vnimanie.html  veroyatnost-yazyk-ii.html
go/: CLAUDE.md  Dockerfile  go.work
health/: aktivnost.html  apnoe.html  energobalans.html  index.html  kalorii.html  khronotipy.html  makro.html  mikro.html  pamyat.html  pitanie.html  podvizhnost.html  risk.html  zony.html
html/: courses.html  index.html  llms.txt  robots.txt  sitemap.xml
hugot-memory/: Makefile  README.md  go.mod
infra/: README.md
law/: index.html  nesovershennoletnie.html
logic/: index.html
map/: index.html
mcp/: CLAUDE.md
memory/: MEMORY.md  agile-course-canonical-route.md  apollo-mentoring-loop.md  art-course.md  bcs-course.md  bcs-family-tooling.md  cm-ship-program.md  cms-content-store-parity.md  codemojex-admin-program.md  codemojex-livereact-render.md  codemojex-program.md  codemojex-tauri-track.md  codemojex-tma-edge.md  codemoji-design-system.md  course-nav-prose-no-redundant-status.md  (+30 more)
(+6495 files in other folders)
