[package]
name = "echo_graft_backend"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "echo_graft_backend — the supervised EchoMQ participant driving the echo_graft Rust page-engine (eg.4)."

[lints]
workspace = true

[dependencies]
echo_graft = { path = "../echo_graft" }
echo_graft_proto = { path = "../echo_graft_proto" }

bilrost = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
test-log = { workspace = true, features = ["trace"] }
