[package]
name = "echo_graft_backend"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "echo_graft_backend — the supervised EchoMQ participant driving the echo_graft Rust page-engine (eg.4)."

# The deployable backend binary (eg.5). Declared with an explicit non-`bin/` path because the
# repo-root .gitignore has a blanket `bin/` rule (a Node convention) that would otherwise swallow
# Rust's src/bin/ source — keeping the artifact tracked for eg.6's cross-compile.
[[bin]]
name = "echo_graft_backend"
path = "src/backend_main.rs"

[lints]
workspace = true

[dependencies]
echo_graft = { path = "../echo_graft" }
echo_graft_proto = { path = "../echo_graft_proto" }

bilrost = { workspace = true }
bytes = { workspace = true }
fjall = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
# The live Valkey transport (eg.5 step 4, the ruled A-2) is a thin tokio socket loop reusing the
# echo_graft_proto codec — no redis/valkey client dep. net+io+rt+macros are the surface it needs;
# `signal` is the deployable backend binary's shutdown handler.
tokio = { workspace = true, features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
test-log = { workspace = true, features = ["trace"] }
