[package]
name = "echo_graft_proto"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

description = "echo_graft_proto — the byte-frozen, version-negotiated EchoMQ wire for echo_graft_backend (eg.4)."

[lints]
workspace = true
