[package]
name = "echo_graft_test"
version = "0.1.0"
edition = "2024"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
echo_graft = { path = "../echo_graft", features = ["testutil", "precept"] }
echo_graft_tracing = { path = "../echo_graft_tracing" }

anyhow = { workspace = true }
precept = { workspace = true, features = ["antithesis", "enabled"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
